--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="static/pypi_checker.js" type="text/javascript">
   </script>
   <title>
-   Pypi - YourCompany
+   Pypi - Terēan
   </title>
  </head>
  <body>
