--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     Welcome to the private Python package index of Terēan!
     <br/>
     You can install packages with :
-    <pre><code>pip install &lt;package_name&gt; --extra-index-url https://astariul.github.io/github-hosted-pypi/</code></pre>
+    <pre><code>pip install &lt;package_name&gt; --extra-index-url https://dbarnes-terean.github.io/terean-pypi/</code></pre>
    </p>
    <hr/>
    <h6 class="text-header">
